# tui-screen-savers-rs

./: .gitignore  .tmuxp.yaml  Cargo.toml  Justfile  Makefile  README.md  notes.org  rustfmt.toml
.github/workflows/: additional-checks.yml  code-quality.yml  platform-coverage.yml  rust.yml  test.yml
benches/: matrix_benchmarks.rs  rain_benchmarks.rs
src/: buffer.rs  check.rs  common.rs  config.rs  donut.rs  error.rs  fill.rs  lib.rs  main.rs  matrix.rs
src/blank/: effect.rs  mod.rs
src/boids/: boids.rs  effect.rs  mod.rs
src/check/: effect.rs  mod.rs
src/crab/: effect.rs  mod.rs
src/cube/: effect.rs  mod.rs
src/donut/: effect.rs  mod.rs
src/life/: conway_life.rs  effect.rs  mod.rs
src/matrix/: charworm.rs  draw.rs  matrix.rs  mod.rs  rain.rs  tmp.rs
src/maze/: effect.rs  gen_maze.rs  mod.rs
src/rain/: digital_rain.rs  draw.rs  gradient.rs  mod.rs  rain_drop.rs  rain_options.rs
