[package]
name = "tarts"  # shortcut from Terminal Arts
version = "0.1.6"
edition = "2021"

authors = ["oiwn <alex@imscraping.ninja>"]
description = "Screen savers and visual effects for terminal"
license = "MIT" # Or another valid SPDX license expression
repository = "https://github.com/oiwn/tui-screen-savers-rs"
documentation = "https://docs.rs/tarts"
homepage = "https://github.com/oiwn/tui-screen-savers-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
derive_builder = "0.12"
once_cell = "1.18"
pico-args = "0.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rain_benchmarks"
harness = false

# optimized to size
[profile.release]
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # enable link time optimization
codegen-units = 1
