[package]
name = "tarts"  # shortcut from Terminal Arts
version = "0.1.9"
edition = "2021"

authors = ["oiwn <alex@imscraping.ninja>"]
description = "Screen savers and visual effects for terminal"
license = "MIT" # Or another valid SPDX license expression
repository = "https://github.com/oiwn/tui-screen-savers-rs"
documentation = "https://docs.rs/tarts"
homepage = "https://github.com/oiwn/tui-screen-savers-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28"
derive_builder = "0.20"
env_logger = "0.11.6"
log = "0.4"
pico-args = "0.5"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rain_benchmarks"
harness = false

# optimized to size
[profile.release]
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true  # enable link time optimization
codegen-units = 1
