[package]
name = "tarts"  # shortcut from Terminal Arts
version = "0.1.14"
edition = "2024"

authors = ["oiwn <alex@imscraping.ninja>"]
description = "Screen savers and visual effects for terminal"
license = "MIT"
repository = "https://github.com/oiwn/tui-screen-savers-rs"
documentation = "https://docs.rs/tarts"
homepage = "https://github.com/oiwn/tui-screen-savers-rs"

[dependencies]
crossterm = "0.28"
derive_builder = "0.20"
directories = "6.0"
env_logger = "0.11"
log = "0.4"
pico-args = "0.5"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.19"

[[bench]]
name = "rain_benchmarks"
harness = false

# optimized to size
[profile.release]
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true  # enable link time optimization
codegen-units = 1
